2002-05-27  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-reader.c:
	(reader_get_chunk): added, used to get a chunk from a multi
	  chunked document.
	(reader_man_info_start): 
	- now handles docbook too. will be renamed later.
	- add docbook results in cache.
	- get chunk from document if docbook.
	(yelp_reader_start): 
	- check in cache if document is there, if so, just get the chunk 
	  and signal. 
	- if not in cache, use g_timeout_add instead of idle.

	* src/yelp-db2html.c: 
	- this is now it's own binary
	- use multichunk
	- don't use YelpURI so that we don't need to init gnome vfs

	* src/yelp-db2html.h: removed
	
	* src/yelp-cache.c: first dummy implementation of cache.

	* src/yelp-base.c (yelp_base_init): init the cache.

	* src/Makefile.am:
	(yelp_db2html_LDADD): added binary for db2html.
	(yelp_SOURCES): added yelp-cache.[ch] and removed 
	  yelp-db2html.[ch]

2002-05-26  Mikael Hallendal  <micke@codefactory.se>

	* stylesheets/yelp-customization.xsl: 
	- Don't include section name in end comment.
	- put [] around the section name in start tag.
	
2002-05-26  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: added "it" to ALL_LINGUAS

2002-05-23  Jacob Berkman  <jacob@ximian.com>

	* src/Makefile.am (yelp-marshal-main.c): add explicit dependency
	on yelp-marshal.c to make automake work

2002-05-23  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-content.c:
	(yelp_view_content_new): shrink TOC-tree width

	* src/yelp-html-gtkhtml1.c (html_link_clicked_cb): 
	- don't shortcut info

2002-05-22  Sander Vesik <sander.vesik@sun.com>

	* stylesheets/yelp/customization.xsl:
	- fix whitespace around 'About This Document'
	- whitespace reduction for headers
	- try to fix table of contents links not showing up for Hallski
	- the 'previous' link on a first sect2 of a sect1 
	- work on indirect previous links
	- display the document title as a H1 on the TOC page instead of
	  having it in the navbar
